--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
+/*this styling page is use by whole file in this project
+
+add google fonts
+*/
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,500;1,200;1,300;1,400&display=swap');
+
+
+
+
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Josefin Sans', sans-serif;
+
+}
+body{
+  background: black;
+}
+h1,h4,a,p{
+  color: white;
+  text-decoration: none;
+}
+ul{
+  list-style-type: none;
+}
+.btn{
+  padding: 12px 32px;
+  font-size: 1rem;
+text-transform: uppercase;
+background: rgb(248,217,15);
+color: #222;
+border: 1px solid #fff;
+font-weight: 600;
+cursor: pointer;
+}
+.btn-light{
+  background: transparent;
+  color: #fff;
+}
+.btn:hover{
+  background: rgba(255,255,255,0.2);
+  color: #fff;
+  transition: 0.3s;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
