--- a/src/component/HeroImg/HeroImgStyle.css
+++ b/src/component/HeroImg/HeroImgStyle.css
@@ -20,3 +20,36 @@
     background-color: #000;
     opacity: 0.8;
 }
+.hero{
+    height: 100%;
+    width:100%
+}
+.hero .content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%,-50%);
+}
+.hero .content h1{
+    font-size: 4rem;
+    padding: 0.6rem 0 1.5rem;
+}
+.hero .content p{
+    font-size: 1.4rem;
+    font-weight: 200;
+    text-transform: uppercase;
+}
+.content .btn{
+    margin: 1rem 0.2rem;
+}
+
+
+@media (max-width:640px){
+    .hero .content h1{
+        font-size: 3rem;
+    }
+    .hero .content p{
+        font-size: 1.4rem;
+    }  
+}
